fix serach input align in safari

--- a/@antv/gatsby-theme-antv/site/components/Search.module.less
+++ b/@antv/gatsby-theme-antv/site/components/Search.module.less
@@ -13,6 +13,7 @@
   .input {
     border: none;
     height: 32px;
+    line-height: 32px;
     outline: none;
     background: transparent;
     vertical-align: baseline !important;
